# qwen-coder-mcp

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  STATE.md  pyproject.toml  pytest.ini
.agent/: agent_state.json  bootstrap.md  loop_log.md  next.md  tui_history.jsonl
.agent/benchmarks/: live-writes-loop285.json  (+6 more)
agent/: __init__.py  loop.py  timing_analyze.py
docs/: AGENT_CHECKPOINTS.md  ARCHITECTURE.md  EXTERNAL_INTEGRATION.md  LOCAL_SERVE.md
scripts/: benchmark_real_model.py  run_loop.sh  serve_qwen.sh  smoke_live_writes.py  stop_qwen.sh  wait_ready.sh
tests/: _helpers.py  conftest.py  test_agent_checkpoint.py  test_agent_event_latency.py  test_agent_loop.py  test_agent_resume_flag.py  test_agent_summary_event.py  test_agent_ttft.py  test_apply_diff.py  test_apply_diff_paths.py  test_ask_user_tool.py  test_auto_continue.py  test_auto_continue_stream.py  test_benchmark_scenarios.py  test_candidate_files.py  test_changed_paths.py  test_chat_stream.py  test_checkpoint_hint.py  test_checkpoint_listing_width.py  test_checkpoints_diff.py  test_checkpoints_diff_inline.py  test_checkpoints_diff_since_resume.py  test_checkpoints_export.py  test_checkpoints_export_gzip.py  test_checkpoints_slash.py  test_cli_entry_points.py  test_commit_and_push.py  test_config_settings.py  test_cursor.py  test_diff_dispatcher_auto_width.py  test_diff_files_tool.py  test_diff_scope.py  test_file_info_tool.py  test_format_tool_latency.py  test_fs_dry_run_and_view.py  test_fs_read_pattern.py  test_fs_regex_edit.py  test_fs_tools.py  test_fs_tools_v2.py  test_fs_write_atomic.py  (+72 more)
(+44 files in other folders)
