[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-coder-mcp"
version = "0.1.0"
description = "MCP server backed by Qwen3.6-27B with a self-improving agentic loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prakyath P Nayak" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
tui = ["textual>=0.50"]

[project.scripts]
qwen-coder-mcp = "qwen_coder_mcp.server:main"
qwen-coder-tui = "qwen_coder_mcp.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
